Updates to docker compose validator

--- a/src/components/BeautyIndexJsonLd.astro
+++ b/src/components/BeautyIndexJsonLd.astro
@@ -29,6 +29,8 @@ const schema = {
   "creator": {
     "@type": "Person",
     "@id": "https://patrykgolabek.dev/#person",
+    "name": "Patryk Golabek",
+    "url": "https://patrykgolabek.dev/",
   },
   "keywords": [
     "programming languages",
